gke-k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            # this was for the emptydir
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            # this is for the PVC
            # - name: postgres-storage
            #   mountPath: /var/lib/postgresql/data
      volumes:
        # this is for the emptydir
        - name: postgres-data
          emptyDir: {}
        # this is for the PVC
        # - name: postgres-storage
        #   persistentVolumeClaim:
        #     claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
